--- a/docker-compose-enchanter-dev.yml
+++ b/docker-compose-enchanter-dev.yml
@@ -318,6 +318,16 @@ services:
       - frontend
       - backend
 
+  ### AWS EB-CLI ################################################
+#  aws:
+#    build:
+#      context: ./aws
+#    volumes:
+#      - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}${APP_CODE_CONTAINER_FLAG}
+#    depends_on:
+#      - workspace
+#    tty: true
+
   ### Portainer ################################################
   portainer:
     build:
